[package]
name = "time-unit"
version = "0.1.2"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/time-unit"
authors = ["Daniel McGraw <dan.j.mcgraw@gmail.com>"]
description = "A time-unit library"
keywords = ["unit", "time", "time-unit"]
repository = "https://github.com/danielmcgraw/time-unit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
